--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url(./carrucel.css);
 :root {
   --colorPrincipal: #2a94a9;
   --colorSecundario: #247a8e;
@@ -495,19 +496,20 @@ img {
 .seccion-cuatro{
     overflow: hidden;
   width: 100%;
-  height: auto;
-  background-image: linear-gradient(
+  height: 110vh;
+  background-color: var(--colorTerciarios);
+  /* background-image: linear-gradient(
     to left top,
     #247a8e,
     #268095,
     #27879b,
     #288da2,
     #2a94a9
-  );
+  ); */
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.8rem 3rem 3rem 3rem;
+  padding: 1.8rem 0 1.8rem 0;
 }
 
 @media (min-width: 780px) {
@@ -521,12 +523,19 @@ img {
   width: 90%;
   height: 500px;
 
+
+}
+
+@media (min-width: 780px) {
+  .div-cards-portafolio {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 2.5rem;
+  }
 }
 .card-portafolio{
+  display: none;
     background-color: var(--colorTerciarios);
     border-radius: 10px;
     width: 100%;
@@ -534,25 +543,45 @@ img {
     grid-row: 1/3;
 }
 
+@media (min-width: 780px) {
+  .card-portafolio{
+    display: block !important;
+  }
+}
 .proyecto-1{
   background-image: url('../assets/img/proyectos/consultas-nip/img-uno.png');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 .proyecto-2{
   background-image: url('../assets/img/proyectos/drive-thrue/img-uno.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
-
+  background-position: center center;
 
 }
 .proyecto-3{
   background-image: url('../assets/img/proyectos/turnos-shake/img-uno.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 
 
 }
 /* .proyecto-4{
   background-image: url('../assets/img/proyectos/consultas-nip/img-uno.png');
 } */
+
+.div-cards-portafolio-carrucel{
+  display: block !important;
+  width: 100%;
+  height: 500px;
+
+} 
+
+@media (min-width: 780px) {
+  .div-cards-portafolio-carrucel{
+    display: none !important;
+  }
+}
