--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -519,10 +519,12 @@ img {
   }
 } 
 
-.div-cards-portafolio{
+.div-cards-portafolio{  
+  overflow: hidden;
   width: 90%;
-  height: 500px;
-
+  height: 600px;
+    border-radius: 20px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 
 }
 
