--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url(./inicio.css);
+@import url(./quienes-somos.css);
+@import url(./servicios.css);
+@import url(./portafolio.css);
 @import url(./carrucel.css);
 :root {
   --colorPrincipal: #2a94a9;
@@ -146,444 +150,4 @@ img {
   }
 }
 
-.seccion-uno {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 3rem 0 3rem;
-  margin: 0;
-  height: 100vh;
-  /* background-color: #fff; */
-  background-image: url(../assets/img/ibm-wall.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-}
 
-@media (min-width: 780px) {
-  .seccion-uno {
-    /* flex-direction: row; */
-
-    padding-left: 5rem;
-  }
-}
-
-.texto-inicio {
-  color: #fff;
-  max-width: 100%;
-}
-
-@media (min-width: 780px) {
-  .texto-inicio {
-    max-width: 45%;
-  }
-}
-.texto-inicio h1 {
-  text-align: center;
-}
-.texto-inicio p {
-  text-align: center;
-  font-size: 1.8rem;
-  margin-bottom: 3rem;
-  font-weight: 700;
-}
-
-@media (min-width: 780px) {
-  .texto-inicio h1 {
-    text-align: left;
-  }
-  .texto-inicio p {
-    text-align: left;
-  }
-}
-.botones-inicio {
-  display: flex;
-  justify-content: center;
-}
-@media (min-width: 780px) {
-  .botones-inicio {
-    justify-content: flex-start;
-  }
-}
-
-.botones-inicio a {
-  border: solid 2px #2a94a9;
-  font-size: 1.8rem;
-  text-transform: uppercase;
-  font-weight: 700;
-  padding: 1rem 3rem;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  color: #268095;
-}
-
-.botones-inicio a:hover {
-  background: linear-gradient(
-    to right,
-    var(--colorSecundario) 0%,
-    var(--colorCuaternario) 100%
-  );
-  color: var(--colorTerciarios);
-  border: solid 2px #1d4d74;
-}
-
-/* Quienes somos */
-.seccion-dos {
-  overflow: hidden;
-  width: 100%;
-  height: auto;
-  background-image: linear-gradient(
-    to left top,
-    #247a8e,
-    #268095,
-    #27879b,
-    #288da2,
-    #2a94a9
-  );
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1.8rem 3rem 3rem 3rem;
-  /* justify-content: center; */
-}
-
-@media (min-width: 780px) {
-  .seccion-dos {
-    padding: 5.8rem 5rem 0 5rem;
-    height: 100vh;
-  }
-}
-.seccion-dos h1 {
-  color: #fff;
-  margin: 0;
-}
-
-.texto-quienes-somos {
-  color: #fff;
-  text-align: center;
-  font-size: 1.8rem;
-
-  font-weight: 700;
-}
-
-.div-quienes-somos {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media (min-width: 780px) {
-  .texto-quienes-somos {
-    /* text-align: left; */
-    max-width: 60%;
-    text-align: center;
-  }
-}
-
-.quienes-somos-cita {
-  font-size: 3rem;
-  font-weight: 700;
-  color: #fff;
-}
-.iconos-quienes-somos {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  margin-top: 2rem;
-}
-
-@media (min-width: 780px) {
-  .iconos-quienes-somos {
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 80%;
-    gap: 2rem;
-  }
-}
-
-@media (min-width: 1380px) {
-  .iconos-quienes-somos {
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 80%;
-    gap: 2rem;
-  }
-}
-.div-icono-quienes-somos {
-  /* border: 5px solid var(--colorCuaternario); */
-  padding: 0 1rem;
-  background-color: var(--colorTerciarios);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--colorSecundario);
-  font-size: 2.5rem;
-  font-weight: 700;
-}
-@media (min-width: 780px) {
-  .div-icono-quienes-somos {
-    padding: 1.5rem;
-  }
-}
-
-@media (min-width: 1380px) {
-  .div-icono-quienes-somos {
-    padding: 1.5rem;
-  }
-}
-
-.div-icono-quienes-somos i {
-  font-size: 5rem;
-  margin-top: 1rem;
-}
-
-.description-icon-valores p {
-  margin: 0;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #333;
-  text-align: center;
-}
-
-@media (min-width: 1380px) {
-  .description-icon-valores p {
-    margin-top: 1rem;
-
-    font-size: 1.8rem;
-    font-weight: 600;
-  }
-}
-
-/* Servicios */
-
-.seccion-tres {
-  overflow: hidden;
-  width: 100%;
-  height: auto;
-  background-color: var(--colorQuintario);
-  padding: 1.8rem 3rem 3rem 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-@media (min-width: 780px) {
-  .seccion-tres {
-    height: 100vh;
-   padding: 8rem 3rem 0 3rem; 
-     justify-content: start;
-  }
-}
-
-.seccion-tres h1 {
-  color: #fff;
-  margin: 0;
-  text-align: center;
-  font-size: 2.8rem;
-  font-weight: 700;
-}
-
-.seccion-tres p {
-  text-align: center;
-  color: var(--colorSecundario);
-  text-align: center;
-  font-size: 1.8rem;
-  font-weight: 700;
-  max-width: 100%;
-  margin: 1rem 1rem 0 1rem;
-}
-
-.servicios-cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 1.5rem;
-  margin-top: 3.5rem;
-}
-@media (min-width: 780px) {
-  .servicios-cards {
-    grid-template-columns: repeat(5, 1fr);
-      grid-template-rows:none;
-    max-width: 96%;
-  }
-}
-.card-service {
-  padding: 1rem;
-  background-color: #01162b;
-  border-radius: 10px;
-  max-height: 100rem;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.card-service i {
-  font-size: 5rem;
-  margin-top: 1rem;
-  color: var(--colorSecundario);
-}
-
-.card-service p {
-  text-align: center;
-  color: var(--colorTerciarios);
-  font-size: 1.8rem;
-  font-weight: 700;
-  max-width: 100%;
-  margin: 0;
-  /* margin: 1rem 1rem 0 1rem;      */
-}
-.card-service-text{
-  padding: 2rem 0;
-}
-.card-service-text p{
-  text-align: center;
-  color: var(--colorTerciarios);
-  font-size: 1.8rem;
-  font-weight: 400;
-  max-width: 100%;
-  margin: 0;
-}
-.servicios-cards .card-service:nth-child(1) {
-  grid-column: 1 / 3;
-}
-@media (min-width: 780px) {
-  .servicios-cards .card-service:nth-child(1) {
-    grid-column: 1 / 2;
-  }
-}
-.servicios-cards .card-service:nth-child(2) {
-  grid-column: 3 / 6;
-}
-@media (min-width: 780px) {
-  .servicios-cards .card-service:nth-child(2) {
-    grid-column: 2 / 3;
-  }
-}
-.servicios-cards .card-service:nth-child(3) {
-  grid-row: 2 / 3;
-  grid-column: 1 / 3;
-}
-@media (min-width: 780px) {
-  .servicios-cards .card-service:nth-child(3) {
-    grid-column: 3 / 4;
-    grid-row: inherit;
-  }
-}
-
-.servicios-cards .card-service:nth-child(4) {
-  grid-row: 2 / 3;
-  grid-column: 3 / 6;
-}
-@media (min-width: 780px) {
-  .servicios-cards .card-service:nth-child(4) {
-       grid-row: inherit;
-    grid-column: 4 / 5;
-  }
-}
-.servicios-cards .card-service:nth-child(5) {
-  grid-row: 3 / 4;
-  grid-column: 2 / 4;
-}
-
-@media (min-width: 780px) {
-  .servicios-cards .card-service:nth-child(5) {
-    grid-row: inherit;
-    grid-column: 5 / 6;
-  }
-}
-/* Portafolio de proyectos */
-
-.seccion-cuatro{
-    overflow: hidden;
-  width: 100%;
-  height: 100vh;
-  background-color: var(--colorTerciarios);
-  /* background-image: linear-gradient(
-    to left top,
-    #247a8e,
-    #268095,
-    #27879b,
-    #288da2,
-    #2a94a9
-  ); */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1.8rem 0 1.8rem 0;
-}
-
-@media (min-width: 780px) {
-  .seccion-cuatro {
-    padding: 5.8rem 5rem 0 5rem;
-    height: 100vh;
-  }
-} 
-
-.div-cards-portafolio{  
-  overflow: hidden;
-  width: 90%;
-  height: 600px;
-    border-radius: 20px;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-
-}
-
-@media (min-width: 780px) {
-  .div-cards-portafolio {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 2.5rem;
-  }
-}
-.card-portafolio{
-  display: none;
-    background-color: var(--colorTerciarios);
-    border-radius: 10px;
-    width: 100%;
-    height: 80%;
-    grid-row: 1/3;
-}
-
-@media (min-width: 780px) {
-  .card-portafolio{
-    display: block !important;
-  }
-}
-.proyecto-1{
-  background-image: url('../assets/img/proyectos/consultas-nip/img-uno.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-}
-.proyecto-2{
-  background-image: url('../assets/img/proyectos/drive-thrue/img-uno.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-
-}
-.proyecto-3{
-  background-image: url('../assets/img/proyectos/turnos-shake/img-uno.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-
-
-}
-/* .proyecto-4{
-  background-image: url('../assets/img/proyectos/consultas-nip/img-uno.png');
-} */
-
-.div-cards-portafolio-carrucel{
-  display: block !important;
-  width: 100%;
-  height: 500px;
-
-} 
-
-@media (min-width: 780px) {
-  .div-cards-portafolio-carrucel{
-    display: none !important;
-  }
-}
