--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
 @import url(./servicios.css);
 @import url(./portafolio.css);
 @import url(./carrucel.css);
+@import url(./modal.css);
 :root {
   --colorPrincipal: #2a94a9;
   --colorSecundario: #247a8e;
