--- a/src/css/quienes-somos.css
+++ b/src/css/quienes-somos.css
@@ -4,14 +4,15 @@
   overflow: hidden;
   width: 100%;
   height: auto;
-  background-image: linear-gradient(
+  background-color: #24495a;
+  /* background-image: linear-gradient(
     to left top,
     #247a8e,
     #268095,
     #27879b,
     #288da2,
     #2a94a9
-  );
+  ); */
   display: flex;
   flex-direction: column;
   align-items: center;
