--- a/src/css/quienes-somos.css
+++ b/src/css/quienes-somos.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.8rem 3rem 3rem 3rem;
+  padding: 1.8rem 2rem 3rem 2rem;
   /* justify-content: center; */
 }
 
@@ -61,7 +61,7 @@
 .iconos-quienes-somos {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: .7rem;
+  gap: 1rem;
   margin-top: 2rem;
 }
 
@@ -89,17 +89,21 @@
   flex-direction: column;
   align-items: center;
   color: var(--colorSecundario);
-  font-size: 2.5rem;
+  font-size: 1.8rem;
   font-weight: 700;
 }
 @media (min-width: 780px) {
   .div-icono-quienes-somos {
+  font-size: 2.5rem;
+
     padding: 1.5rem;
   }
 }
 
 @media (min-width: 1380px) {
   .div-icono-quienes-somos {
+  font-size: 2.5rem;
+
     padding: 1.5rem;
   }
 }
