--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
-    width: 80%;
+    width: 100% !important;
     max-width: 450px;
     min-height: 30rem;
     /* max-height: 600px; */
@@ -42,6 +42,12 @@
     transform: translateY(-7%);
     transition: transform .5s ease;
     background-color: transparent;
+}
+
+@media (max-width: 780px) {
+ .containe-modal{
+    width: 90%;
+ }
 }
 
 .traslateY{
