--- a/src/css/quienes-somos.css
+++ b/src/css/quienes-somos.css
@@ -30,6 +30,14 @@
   text-align: center;
   color: #fff;
   margin: 0;
+    font-size: 2.8rem;
+
+}
+
+@media (min-width: 780px) {
+  .seccion-dos h1 {
+    font-size: 4.8rem;
+  }
 }
 
 .texto-quienes-somos {
