--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 @import url(./modal.css);
 @import url(./formulario.css);
 @import url(./contacto.css);
+@import url(./footer.css);
 :root {
   --colorPrincipal: #2a94a9;
   --colorSecundario: #247a8e;
