--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -155,3 +155,40 @@ img {
 }
 
 
+
+/* 🔷 Personaliza el título */
+.swal-title-custom {
+  font-size: 2.8rem;
+  font-weight: 600;
+  color: #333;
+  padding: 2rem 0;
+}
+
+/* 💚 Personaliza el icono */
+.swal-icon-custom {
+  font-size: 1.2rem;
+  transform: scale(1.4); /* Aumenta tamaño del icono */
+}
+
+/* 🟩 Puedes ajustar también el cuadro completo */
+.swal2-popup {
+  font-size: 1rem;
+}
+
+/* 🎨 Botón personalizado */
+.swal-btn-custom {
+  color: #fff;
+  background-color: #009455!important; 
+  font-size: 1.8rem;                   
+  
+
+  transition: all 0.3s ease;
+  font-weight: 600;
+}
+
+.swal-btn-custom:hover{
+  background-color: #017e49 !important;
+}
+
+
+
