--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
 @import url(./portafolio.css);
 @import url(./carrucel.css);
 @import url(./modal.css);
+@import url(./masInfo.css);
 @import url(./formulario.css);
 @import url(./contacto.css);
 @import url(./footer.css);
