--- a/src/css/inicio.css
+++ b/src/css/inicio.css
@@ -6,7 +6,7 @@
   margin: 0;
   height: 100vh;
   /* background-color: #fff; */
-  background-image: url(../assets/img/ibm-wall.png);
+  background-image: url(../../public/assets/img/ibm-wall.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
